miniextendr-macros/tests/ui/typed_list_invalid_spec.rs
use miniextendr_macros::typed_list;

const _SPEC: () = {
    let _ = typed_list!(alpha => 42);
};

fn main() {}
